--- a/main.tex
+++ b/main.tex
@@ -627,10 +627,10 @@ Receiver Operating Characteristics \& Area under the curve (ROC-AUC), log-loss, 
   \end{wideitemize}
 \end{frame}
 
-\subsection{Specifics to Model fitting}
+\subsection{Model fitting}
 \begin{transitionsubframe}
   \begin{center}
-    \Huge Model fitting
+    \Huge Specifics to Model fitting
   \end{center}
 \end{transitionsubframe}
 
@@ -690,12 +690,12 @@ Receiver Operating Characteristics \& Area under the curve (ROC-AUC), log-loss, 
   \end{wideitemize}
 \end{frame}
 
-\section{Training, Testing and Validation}
-\begin{transitionframe}
+\subsection{Training, Testing and Validation}
+\begin{transitionsubframe}
   \begin{center}
     \Huge Training, Testing and Validation
   \end{center}
-\end{transitionframe}
+\end{transitionsubframe}
 
 
 \begin{frame}[fragile]{\textbf{Q. What is training?}}
